# rust-decofs-mt

./: .gitpod.yml  Cargo.toml  README.md
docker/: Dockerfile
src/: deco.rs  libc_wrapper.rs  main.rs  unmanaged_file.rs
