[package]
name = "rust-decofs-mt"
version = "0.1.0"
authors = ["Simon Martin <smartin@scottlogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse_mt = "0.5.0"    # A higher-level FUSE filesystem library with multi-threading and inode->path translation.
