[package]
name = "rust-decofs-mt"
version = "0.1.0"
authors = ["Simon Martin <smartin@scottlogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"             # Raw FFI bindings to platform libraries like libc.
log = "0.4"               # A lightweight logging facade for Rust
chrono = "0.4"            # Date and time library for Rust
# A higher-level FUSE filesystem library with multi-threading and inode->path translation.
fuse_mt = "0.6"
